Fixed grid alignment issue and made proj-item a little bigger

--- a/css/projects.css
+++ b/css/projects.css
@@ -22,8 +22,8 @@
     box-shadow: 0 1px 5px -1px #333;
 }
 .proj-item, .proj-item img {
-    height:270px;
-    width:270px;
+    height:280px;
+    width:280px;
 }
 
 .proj-item span {
@@ -61,6 +61,7 @@
     color:#3d4351;
     display:block;
     text-decoration:none;
+
     width:100%;
     height:100%;
 }
@@ -73,7 +74,7 @@
 
     line-height:30px;
     text-align:center;
-    font-size:22px;
+    font-size:23px;
 
     z-index:0;
 
